fixed sligt  ui shift when password is generated

--- a/src/app/components/password-generator/password-generator.component.sass
+++ b/src/app/components/password-generator/password-generator.component.sass
@@ -107,6 +107,8 @@
                 font-size: map-get($font-size,md )
                 text-transform: uppercase
 
+            .placeholder 
+              opacity: 0
             .strength-meter
                 gap: .3rem
 
